I did everything that was needed, from the front end — all the CSS and HTML — to the service. I left everything ready on the Angular side to make the request. However, due to a CORS issue, it’s not working yet, so that’s what needs to be fixed.

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -9,16 +9,16 @@
 
     <nav>
       <div id="nav-box">
-        <a class="link-nav" href="#">Inicio</a>
-        <a class="link-nav" href="#">Propiedades</a>
-        <a class="link-nav" href="#">Servicios</a>
-        <a class="link-nav" href="#">Nosotros</a>
-        <a class="link-nav" href="#">Contacto</a>
+        <a class="link-nav" routerLink="">Inicio</a>
+        <a class="link-nav" routerLink="properties">Propiedades</a>
+        <a class="link-nav" routerLink="services">Servicios</a>
+        <a class="link-nav" routerLink="about-us">Nosotros</a>
+        <a class="link-nav" routerLink="contact">Contacto</a>
       </div>
     </nav>
 
     <div id="image-box">
-      <button class="cta">Consulta Gratuita</button>
+      <button type="button" class="cta" routerLink="log-in" >Log in</button>
     </div>
   </div>
 </header>
