--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -32,8 +32,8 @@ header {
 }
 
 #logo {
-  width: 1.6rem;
-  height: 1.6rem;
+  width: 4rem;
+  height: 5rem;
 }
 
 #main-title {
@@ -53,6 +53,7 @@ header {
 #nav-box {
   display: flex;
   gap: 2rem;
+  margin-right: 10rem;
 }
 
 .link-nav {
