before talk with edu

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,7 +2,7 @@
   <section class="welcome">
     <h1>Bienvenido a Sullivan Inmobiliaria</h1>
     <p>Tu espacio ideal te está esperando. Explora nuestras propiedades y descubrí el lugar perfecto para vos.</p>
-    <button>Ver Propiedades</button>
+    <button routerLink="properties">Ver Propiedades</button>
   </section>
 
   <section class="info">
