--- a/src/app/components/footer/footer.css
+++ b/src/app/components/footer/footer.css
@@ -1,5 +1,7 @@
 footer{
   background-color: #0f5a33;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .brand-logo{
@@ -11,6 +13,10 @@ footer{
   display: flex;
 
 
+}
+
+.logo-x, .logo-instagram, .logo-facebook{
+  height: 2rem;
 }
 
 :root{
