--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -12,9 +12,15 @@
       </p>
       <div class="social">
         <!-- Podés reemplazar por iconos reales si usás alguna librería -->
-        <a href="#" aria-label="Facebook">Fb</a>
-        <a href="#" aria-label="Instagram">Ig</a>
-        <a href="#" aria-label="Twitter/X">Tw</a>
+        <a href="https://www.facebook.com/zuck" target="_blank" aria-label="Facebook">
+          <img class="logo-facebook" src="logo-facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/leomessi/" target="_blank" aria-label="Instagram">
+          <img class="logo-instagram" src="logo-instagram.png" alt="Instagram">
+        </a>
+        <a href="https://x.com/AlpineF1Team" target="_blank" aria-label="Twitter/X">
+          <img class="logo-x" src="logo-x.png" alt="Twitter">
+        </a>
       </div>
     </section>
 
@@ -22,11 +28,11 @@
     <section class="footer-col">
       <h4 class="footer-title">Enlaces Rápidos</h4>
       <ul class="footer-list">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Propiedades</a></li>
-        <li><a href="#">Servicios</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="#">Contacto</a></li>
+        <li><a routerLink="">Inicio</a></li>
+        <li><a routerLink="properties">Propiedades</a></li>
+        <li><a routerLink="services">Servicios</a></li>
+        <li><a routerLink="about-us">Nosotros</a></li>
+        <li><a routerLink="contact">Contacto</a></li>
       </ul>
     </section>
 
@@ -34,11 +40,11 @@
     <section class="footer-col">
       <h4 class="footer-title">Servicios</h4>
       <ul class="footer-list">
-        <li><a href="#">Compra y Venta</a></li>
-        <li><a href="#">Alquileres</a></li>
-        <li><a href="#">Tasaciones</a></li>
-        <li><a href="#">Asesoramiento Legal</a></li>
-        <li><a href="#">Inversiones</a></li>
+        <li><a routerLink="properties">Compra y Venta</a></li>
+        <li><a routerLink="properties">Alquileres</a></li>
+        <li><a routerLink="services">Tasaciones</a></li>
+        <li><a routerLink="services">Asesoramiento Legal</a></li>
+        <li><a routerLink="services">Inversiones</a></li>
       </ul>
     </section>
 
