In this commit the html and css of register and login pages are finish. In the first code session of this commit i had created a log-in form and a register-form, but i did remember that there is reactive forms, so i did form autentication, this is a reactive form and it cover the two cases of autenticaction, log in and register.

--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -3,19 +3,9 @@
   width: 5rem;
 }
 
-:host{
-  border-bottom: 0.05rem solid #e5e7eb;
-
-}
-
-header {
-  background: #fff;
-}
-
 .header-inner {
   display: flex;
   justify-content: space-between;
-
   margin: 0 auto;
   padding: 1rem 1.5rem;
   align-items: center;
@@ -74,6 +64,7 @@ header {
   border: 0;
   border-radius: 0.6rem;
   padding: 0.6rem 1rem;
+  margin: 0.30rem;
 
   font-weight: 800;
 }
