--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -19,6 +19,7 @@
 
     <div id="image-box">
       <button type="button" class="cta" routerLink="log-in" >Log in</button>
+      <button type="button" class="cta" routerLink="register" >Register</button>
     </div>
   </div>
 </header>
