--- a/src/app/components/footer/footer.css
+++ b/src/app/components/footer/footer.css
@@ -1,19 +1,15 @@
 footer{
   background-color: #0f5a33;
 
+
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.brand-logo{
-  height: 5rem;
-  width: 5rem;
-}
-
-.footer-top{
-  display: flex;
-
 
 }
+
+.brand-logo{ height: 5rem; width: 5rem;}
+
+.footer-top{ display: flex;}
 
 .logo-x, .logo-instagram, .logo-facebook{
   height: 2rem;
@@ -64,9 +60,5 @@ footer{
 }
 
 /* responsive */
-@media (max-width:60rem){
-  .footer-top{ grid-template-columns: 1fr 1fr; }
-}
-@media (max-width:40rem){
-  .footer-top{ grid-template-columns: 1fr; }
-}
+@media (max-width:60rem){ .footer-top{ grid-template-columns: 1fr 1fr; } }
+@media (max-width:40rem){ .footer-top{ grid-template-columns: 1fr; } }
