The register and login are working succesgit add .!

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,6 +5,7 @@
       <h1 id="main-title">
         Sullivan <span class="brand-sub">Inmobiliaria</span>
       </h1>
+      <!-- @if(){ <button>Administracion</button> } -->
     </div>
 
     <nav>
