--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -4,7 +4,7 @@
         <h2>Registro</h2>
 
         <fieldset>
-            <label for="firstName">Ingrese su primer nombre</label>
+            <label for="firstName">Ingrese su nombre</label>
             <input id="firstName" type="text" placeholder="Carlos" formControlName="firstName">
             @if (formulario.get('firstName')?.hasError('required') && formulario.get('firstName')?.touched )  { <p class="p-error">Este campo es obligatorio</p> }
             @else if (formulario.get('firstName')?.hasError('minlength') && formulario.get('firstName')?.touched )  { <p class="p-error">Este campo tiene un minimo de 3 caracteres</p> }
@@ -13,7 +13,7 @@
 
 
         <fieldset>
-            <label for="surname">Ingrese su segundo nombre</label>
+            <label for="surname">Ingrese su apellido</label>
             <input id="surname" type="text" placeholder="Saul" formControlName="surname">
             @if (formulario.get('surname')?.hasError('required') && formulario.get('surname')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
             @else if (formulario.get('surname')?.hasError('minlength') && formulario.get('surname')?.touched ) { <p class="p-error">Este campo tiene un minimo de 3 caracteres</p> }
@@ -45,7 +45,7 @@
                 <input id="numberPhone" type="text" placeholder="156232544" formControlName="numberPhone">
             </div>
         </fieldset>
-        @if (formulario.get('numberPhone')?.hasError('required') && formulario.get('firstName')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
+        @if (formulario.get('numberPhone')?.hasError('required') && formulario.get('numberPhone')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
 
 
         <fieldset>
