--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -18,9 +18,13 @@
     </nav>
 
     <div id="image-box">
-      <button type="button" class="cta" routerLink="log-in">Log in</button>
-      <button type="button" class="cta" routerLink="register">Register</button>
-      <button type="button" class="cta" (click)="logOut()">Log out</button>
+      @if (isLogged()) {
+        <button type="button" class="cta" (click)="logOut()">Log out</button>
+      }@else {
+        <button type="button" class="cta" routerLink="log-in">Log in</button>
+        <button type="button" class="cta" routerLink="register">Register</button>
+      }
+
     </div>
   </div>
 </header>
