--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -12,50 +12,61 @@
       <p>En Sullivan Propiedades, combinamos la calidez irlandesa con el profesionalismo inmobiliario para ofrecerte las
         mejores opciones.</p>
       <div class="hero-buttons">
-        <button class="btn-primary">Ver Propiedades</button>
-        <button class="btn-secondary">Contactar</button>
+        <button class="btn-primary" routerLink="properties">Ver Propiedades</button>
+        <button class="btn-secondary" routerLink="contact">Contactar</button>
       </div>
     </div>
   </section>
 
   <section class="search-section">
     <h2>Encuentra tu propiedad ideal</h2>
-    <form class="search-form">
-      <div class="form-group">
+    <form class="search-form" [formGroup]="form" (submit)="onSumbit()">
+
+      <fieldset class="form-group">
         <label for="operation">Tipo de Operación</label>
-        <select id="operation">
-          <option>Comprar</option>
-          <option>Alquilar</option>
+        <select id="operation" formControlName="operationType">
+          <option value="" disabled selected>-- Selecciona un tipo --</option>
+          @for (ot of operationTypeArray; track $index ){
+          <option>{{ot.operationName}}</option>
+          }
         </select>
-      </div>
-      <div class="form-group">
+      </fieldset>
+
+      <fieldset class="form-group">
         <label for="property-type">Tipo de Propiedad</label>
-        <select id="property-type">
-          <option>Casa</option>
-          <option>Departamento</option>
-          <option>Terreno</option>
-          <option>Local Comercial</option>
+        <select id="property-type" formControlName="propertyType">
+          <option value="" disabled selected>-- Selecciona un tipo --</option>
+          @for (pt of propertyTypesArray; track $index) {
+          <option>{{pt.typeName}}</option>
+          }
         </select>
-      </div>
-      <div class="form-group">
+      </fieldset>
+
+      <fieldset class="form-group">
         <label for="location">Ubicación</label>
-        <input type="text" id="location" placeholder="Barrio o zona">
-      </div>
-      <button type="submit" class="btn-search">🔍 Buscar</button>
+        <select id="location" formControlName="zone">
+          <option value="" disabled selected>-- Selecciona un tipo --</option>
+          @for (z of zoneArray; track $index) {
+          <option>{{z.zoneName}}</option>
+          }
+        </select>
+      </fieldset>
+
+      <button [disabled]="form.invalid" type="submit" class="btn-search">Buscar</button>
     </form>
   </section>
 
   <section class="featured-section">
     <div class="section-header">
       <h2 class="header-featured-section-title">Propiedades Destacadas</h2>
-      <a href="#" class="view-all">Ver todas →</a>
+      <a href="properties" class="view-all">Ver todas →</a>
     </div>
     <div class="properties-grid">
 
       @for (p of propertiesfeature; track p.id) {
       <div class="card">
         <div class="image">
-        <img class="property-img" src="{{p.mainImage}}" alt="property">
+          <img class="property-img" src="{{p.mainImage}}" alt="property">
           <span class="badge">{{p.operationTypeDTO.operationName}}</span>
         </div>
 
